--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.5.1",
     "express": "^4.15.4",
     "http": "0.0.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
     "mongoose": "^4.12.4",
     "multer": "^1.3.0",
     "parse-glob": "^3.0.4",
