installing cookie parser

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "body-parser": "^1.18.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.1",
+    "cookie-parser": "^1.4.1",
     "express": "^4.15.4",
+    "express-session": "^1.13.0",
     "http": "0.0.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
