--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery-ui": "^1.12.1",
     "mongoose": "^4.12.4",
     "multer": "^1.3.0",
+    "ngx-quill-editor": "^2.2.2",
     "parse-glob": "^3.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
